# portfolio-bot

./: CMakeLists.txt  README.md  script.sh
cli-bot/: CMakeLists.txt
cli-bot/config/: config.json
cli-bot/data/: portfolio.json
cli-bot/include/: portfolio_calculate.hpp
cli-bot/src/: api_client.cpp  main.cpp  portfolio_calculate.cpp
data/: portfolio.json
include/: api_client.hpp  portfolio_calculate.hpp
manage-bot/: CMakeLists.txt
manage-bot/config/: config.json
manage-bot/include/: cli_manage.hpp  dir_changer.hpp  telegram_manage.hpp
manage-bot/src/: cli_manage.cpp  dir_changer.cpp  main.cpp  telegram_manage.cpp
src/: api_client.cpp  main.cpp  portfolio_calculate.cpp
